--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "webpack-dev-server --mode development --open --hot",
     "build": "webpack --mode production"
   },
-  "author": "",
+  "author": "Verrochek <moranmr8@gmail.com>",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.9.6",
@@ -34,5 +34,6 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.0.0"
-  }
+  },
+  "repository": "https://github.com/Verrok/wbr.git"
 }
