--- a/package.json
+++ b/package.json
@@ -25,15 +25,20 @@
     "sass-loader": "^8.0.2",
     "style-loader": "^1.2.1",
     "terser-webpack-plugin": "^3.0.2",
+    "tslint": "^6.1.2",
+    "tslint-immutable": "^6.0.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "@types/react": "^16.9.35",
+    "@types/react-dom": "^16.9.8",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-helmet": "^6.0.0"
+    "react-helmet": "^6.0.0",
+    "typescript": "^3.9.3"
   },
   "repository": "https://github.com/Verrok/wbr.git"
 }
