--- a/package.json
+++ b/package.json
@@ -32,12 +32,15 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "@babel/preset-typescript": "^7.10.1",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
+    "@types/react-helmet": "^6.0.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.0.0",
+    "ts-loader": "^7.0.5",
     "typescript": "^3.9.3"
   },
   "repository": "https://github.com/Verrok/wbr.git"
